--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "little_ui",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
-    "github-markdown-css": "^5.1.0",
-    "prismjs": "^1.27.0",
-    "vue": "^3.0.0-rc.1",
-    "vue-router": "4.0.12"
+    "github-markdown-css": "4.0.0",
+    "marked": "1.1.1",
+    "prismjs": "1.21.0",
+    "vue": "3.0.0",
+    "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "marked": "^1.1.1",
-    "sass": "^1.49.7",
-    "vite": "^1.0.0-rc.1"
+    "@vue/compiler-sfc": "3.0.0",
+    "rollup-plugin-esbuild": "2.5.0",
+    "rollup-plugin-scss": "2.6.0",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-vue": "6.0.0-beta.10",
+    "sass": "1.32.11",
+    "vite": "1.0.0-rc.1"
   }
 }
